--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ td, th {
 
 .beneficios {
     padding: 3m 0;
-    background: #888888;    
+    background: #888888;
 }
 
 .conteudo-beneficios {
@@ -234,9 +234,38 @@ td, th {
 
 .imagem-beneficios {
     width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover {
+    opacity: 0.3;
 }
 
 .video {
     width: 560px;
     margin: 2em auto;
+}
+
+
+
+@media screen and (max-width: 480px) {
+
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
+
 }
